# crud-rental-properties

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  temp.txt
_backend/: database.py  main.py  schemas.py
backend/: Dockerfile  crud.py  database.db  database.py  entrypoint.sh  main.py  model.py  models.py  pyproject.toml  requirements.txt  router.py  schema.py  schemas.py  settings.py
backend/alembic/: env.py
backend/alembic/versions/: d369125a327d_properties_table.py  dcf624433423_properties_table.py
backend/app/: crud.py  database.py  main.py  model.py  router.py  schema.py  settings.py
frontend/: Dockerfile  app.py  requirements.txt  response.py
sql/: create_table.sql
tests/: conftest.py  test_router.py
