[tool.poetry]
name = "rental-crud"
version = "0.1.0"
description = ""
authors = ["lealre <renaanvp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
pydantic = "^2.6.4"
sqlalchemy = "^2.0.29"
fastapi = "^0.110.0"
python-dotenv = "^1.0.1"
uvicorn = "^0.29.0"
psycopg2-binary = "^2.9.9"
taskipy = "^1.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
api = "uvicorn backend.main:app"

