[tool.poetry]
name = "rental-crud"
version = "0.1.0"
description = ""
authors = ["lealre <renaanvp@gmail.com>"]
readme = "README.md"
packages = [
    {include = 'backend'},
    {include = 'frontend'},
]

[tool.poetry.dependencies]
python = "3.12.*"
pytest-asyncio = "^0.24.0"

[tool.poetry.group.backend.dependencies]
fastapi = {extras = ["standard"], version = "^0.115"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"
alembic = "^1.13.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"
taskipy = "^1.13.0"
aiosqlite = "^0.20.0"
pytest = "^8.3.2"

[tool.poetry.group.frontend.dependencies]
streamlit = "^1.37.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_mode = "auto"

[tool.ruff]
line-length = 79
extend-exclude = ['alembic']

[tool.ruff.lint]
preview = true
select = [
    'I', # isort
    'F', # flake8
    'E', # pylint
    'W', # pylint warnings
    'PL', # black
    'PT' # pytest
]

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

[tool.ruff.format]
preview = true
quote-style = 'single'